Changed The Logic